<resources>
    <string name="app_name">mivhan9_7_19</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="alexander">Alexander</string>
    <string name="address">Address</string>
    <string name="netanya_beri_39">Netanya , Beri 39</string>
    <string name="age">Age</string>
    <string name="_35">35</string>
    <string name="number_pasport">Number Pasport</string>
    <string name="_258147369">258147369</string>
</resources>
