<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textNeme"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorBlack"
        android:text="@string/name"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/myName"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:background="@color/colorBlack"
        android:text="@string/alexander"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toEndOf="@+id/textNeme"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="72dp"
        android:background="@color/colorBlack"
        android:text="@string/address"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNeme"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMyAddress"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorBlack"
        android:text="@string/netanya_beri_39"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/textAddress"
        app:layout_constraintTop_toBottomOf="@+id/myName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorBlack"
        android:text="@string/age"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddress"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMyAge"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorBlack"
        android:text="@string/_35"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/textAge"
        app:layout_constraintTop_toBottomOf="@+id/textMyAddress"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorBlack"
        android:text="@string/number_pasport"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAge"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMyId"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorBlack"
        android:text="@string/_258147369"
        android:textColor="@color/colorWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toEndOf="@+id/textId"
        app:layout_constraintTop_toBottomOf="@id/textMyAge"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>